--- a/packages/react/src/index.css
+++ b/packages/react/src/index.css
@@ -1,4 +1,3 @@
-/* Add CSS styles here! */
 body {
   font-family: sans-serif;
 }
@@ -29,9 +28,8 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .loading {
-  font-size: x-large;
-  font-weight: bold;
   text-align: center;
+  padding-top: 5em;
 }
 
 @media only screen and (max-width: 740px) {
